syntax = "proto3";


option go_package =".;service";

service Hi{
    rpc Hi (HiRequest) returns (HiResponse){
    }
}


message HiRequest {
    string requestName = 1; //1代表的是位置,而不是值
}

message HiResponse {
    string jsonMsg = 1;
}
